# near-groth16-sdk

./: .gitignore  CONTRIBUTING.md  README.md  create-github-repos.sh  setup-github.sh  setup-remotes.sh
circuits/: README.md
circuits/educational/: age_verification.circom  arithmetic_proof.circom  ownership_proof.circom  private_voting.circom
circuits/production/: README.md  deposit.circom  transfer.circom  utils.circom  withdraw.circom
circuits/simple/: hash_preimage.circom  merkle_proof.circom  multiplier.circom  range_proof.circom
cli/: Cargo.toml
cli/src/: main.rs
docs/: CIRCUITS.md  CONTRACTS.md  GAS_OPTIMIZATION.md  INTEGRATION.md  README.md  TROUBLESHOOTING.md
lib/: Cargo.toml
lib/examples/: contract.rs
lib/src/: groth16_tests.rs  lib.rs  poseidon.rs  poseidon_precomputed.rs  poseidon_tests.rs  transcript.rs  types.rs  verifier.rs
sdk/: package.json  tsconfig.json
sdk/examples/: privacy-transfer.ts
sdk/src/: index.ts  merkle.ts  notes.ts  prover.ts  wallet.ts
templates/basic/: Cargo.toml
templates/basic/src/: lib.rs
templates/privacy/: Cargo.toml
templates/privacy-multi-asset/: Cargo.toml
templates/privacy-multi-asset/src/: lib.rs
templates/privacy-near-only/: Cargo.toml
templates/privacy-near-only/src/: lib.rs
templates/privacy/src/: lib.rs  lib_enhanced.rs
templates/voting/: Cargo.toml
templates/voting/src/: lib.rs
