[package]
name = "near-zk-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tool for deploying and interacting with Groth16 ZK contracts on NEAR"
license = "MIT OR Apache-2.0"

[[bin]]
name = "near-zk"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
colored = "2.1"
base64 = "0.21"
regex = "1.10"

[profile.release]
opt-level = "z"
lto = true
