[package]
name = "privacy-pool-near"
version = "1.0.0"
edition = "2021"
authors = ["NEAR ZK Contributors"]
description = "NEAR-only privacy pool using Groth16 proofs"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "5.24"
near_groth16_verifier = { path = "../../lib" }
hex = "0.4"

[dev-dependencies]
near-sdk = { version = "5.24", features = ["unit-testing"] }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

# Build with: cargo build --target wasm32-unknown-unknown --release
