[package]
name = "zk_privacy_contract"
version = "0.1.0"
edition = "2021"
description = "Privacy-preserving contract with nullifier tracking for NEAR Protocol"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "5.24"
near_groth16_verifier = { path = "../../lib" }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
